--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,3 +21,7 @@
 
     <br />
 }
+
+<a asp-action="Index" asp-route-pageNum="1">1</a>
+<a asp-action="Index" asp-route-pageNum="2">2</a>
+<a asp-action="Index" asp-route-pageNum="3">3</a>
