--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,3 +25,6 @@
 <a asp-action="Index" asp-route-pageNum="1">1</a>
 <a asp-action="Index" asp-route-pageNum="2">2</a>
 <a asp-action="Index" asp-route-pageNum="3">3</a>
+
+
+<div page-model
