--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,20 +6,27 @@
 
 <h1>Bookstore</h1>
 
-@foreach (Book b in Model.Books)
-{
-    <h3>@b.Title</h3>
-    <ul>
-        <li>Author: @b.Author</li>
-        <li>Publisher: @b.Publisher</li>
-        <li>ISBN: @b.Isbn</li>
-        <li>Classification: @b.Classification</li>
-        <li>Category: @b.Category</li>
-        <li>Number of Pages: @b.PageCount</li>
-        <li>Price: @b.Price</li>
-    </ul>
+    @foreach (Book b in Model.Books)
+    {
+        <div class="card card-outline-primary m-1 p-1">
+            <div class="bg-light p-1">
+                <h3>@b.Title</h3>
 
-    <br />
-}
-
-<div page-model="@Model.PageInfo" page-action="Index"></div>
+                <span class="badge bg-info" style="float:right">
+                    ISBN: @b.Isbn
+                </span>
+            </div>
+            <ul>
+                <li>Author: @b.Author</li>
+                <li>Publisher: @b.Publisher</li>
+                <li>Classification: @b.Classification</li>
+                <li>Category: @b.Category</li>
+                <li>Number of Pages: @b.PageCount</li>
+                <li>Price: @b.Price</li>
+            </ul>
+        </div>
+    }
+        
+<div page-model="@Model.PageInfo" page-action="Index" page-class="btn"
+     page-class-normal="btn-outline-dark" page-class-selected="btn-primary" page-classes-enabled="true"
+     class="btn-group pull-right m-1"></div>
