--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,23 +8,7 @@
 
     @foreach (Book b in Model.Books)
     {
-        <div class="card card-outline-primary m-1 p-1">
-            <div class="bg-light p-1">
-                <h3>@b.Title</h3>
-
-                <span class="badge bg-info" style="float:right">
-                    ISBN: @b.Isbn
-                </span>
-            </div>
-            <ul>
-                <li>Author: @b.Author</li>
-                <li>Publisher: @b.Publisher</li>
-                <li>Classification: @b.Classification</li>
-                <li>Category: @b.Category</li>
-                <li>Number of Pages: @b.PageCount</li>
-                <li>Price: @b.Price</li>
-            </ul>
-        </div>
+        <partial name="BookSummary" model="b"/>
     }
         
 <div page-model="@Model.PageInfo" page-action="Index" page-class="btn"
