--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
     <div class="row m-1 p-1">
         <div id="types" class="col-3">
-            Put something useful here later
+            <vc:categories></vc:categories>
         </div>
 
         <div class="col-9">
