--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -4,9 +4,15 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
-    <div>
+
+    <div class="bg-dark text-white p-2">
+        Bookstore
+    </div>
+
+    <div class="m-1 p-1">
         @RenderBody()
     </div>
 </body>
