--- a/Views/Shared/BookSummary.cshtml
+++ b/Views/Shared/BookSummary.cshtml
@@ -19,4 +19,12 @@
         <li>Number of Pages: @Model.PageCount</li>
         <li>Price: @Model.Price</li>
     </ul>
+
+    <form method="post" asp-page="/Purchase">
+
+        <input type="hidden" asp-for="@Model.BookId" />
+        <span class="card-text">
+            <button type="submit" class="btn btn-success btn-sm float-end">Purchase</button>
+        </span>
+    </form>
 </div>
