--- a/Pages/Purchase.cshtml
+++ b/Pages/Purchase.cshtml
@@ -34,3 +34,7 @@
         </tr>
     </tfoot>
 </table>
+
+<div>
+    <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Purchasing</a>
+</div>
