--- a/Pages/Purchase.cshtml
+++ b/Pages/Purchase.cshtml
@@ -45,4 +45,5 @@
 
 <div>
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Purchasing</a>
+    <a class="btn btn-primary">Checkout</a>
 </div>
