--- a/Pages/Purchase.cshtml
+++ b/Pages/Purchase.cshtml
@@ -45,5 +45,5 @@
 
 <div>
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Purchasing</a>
-    <a class="btn btn-primary">Checkout</a>
+    <a class="btn btn-primary" asp-controller="Purchase" asp-action="Checkout" >Checkout</a>
 </div>
