--- a/Views/Purchase/Checkout.cshtml
+++ b/Views/Purchase/Checkout.cshtml
@@ -6,7 +6,7 @@
 <h2>Check out now</h2>
 <p>Please enter your details so we we can ship your purchase!</p>
 
-<form method="post">
+<form method="post" asp-action="Checkout">
     <h4>Ship To</h4>
 
     <div class="form-group">
