--- a/Pages/Admin/Routed.razor
+++ b/Pages/Admin/Routed.razor
@@ -1,4 +1,4 @@
-﻿<Router AppAsembly="typeof(Startup).Assembly">
+﻿<Router AppAssembly="typeof(Startup).Assembly">
     <Found>
         <RouteView RouteData="@context" DefaultLayout="typeof(AdminLayout)"></RouteView>
     </Found>
