--- a/Pages/Admin/Index.cshtml
+++ b/Pages/Admin/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@page "/admin"
 
-@model Bookstore.Pages.Admin.IndexModel
-
 @{
 }
 
@@ -14,6 +12,7 @@
     <base href="/" />
 </head>
 <body>
-    <p>Is this working?</p>
+    <component type="typeof(Bookstore.Pages.Admin.Routed)" render-mode="Server" />
+    <script src="/_framework/blazor.server.js"></script>
 </body>
 </html>
