--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -7,9 +7,11 @@
 <div class="container-fluid">
     <div class="row p-2 d-grid">
         <div class="col-3">
-            <NavLink class="btn btn-outline-primary" href="/admin/books"
+
+
+            <NavLink class="btn btn-block btn-outline-primary" href="/admin/books"
                      ActiveClass="btn-primary text-white" Match="NavLinkMatch.Prefix">Books</NavLink>
-            <NavLink class="btn btn-outline-primary" href="/admin/purchases"
+            <NavLink class="btn btn-block btn-outline-primary" href="/admin/purchases"
                      ActiveClass="btn-primary text-white" Match="NavLinkMatch.Prefix">Purchases</NavLink>
         </div>
 
