--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <div class="bg-dark text-white p-2">
         <div class="container-fluid">
             <div class="row">
-                <div class="col navbar-brand">SPORTS STORE</div>
+                <div class="col navbar-brand">Bookstore</div>
                 <div class="col-6 text-right">
                     <vc:cart-summary />
                 </div>
@@ -20,9 +20,9 @@
         </div>
     </div>
 
-    <div class="bg-dark text-white p-2">
+    @*<div class="bg-dark text-white p-2">
         <span class="navbar-brand m-lg-2">Bookstore</span>
-    </div>
+    </div>*@
 
     <div class="row m-1 p-1">
         <div id="types" class="col-3">
@@ -39,5 +39,5 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @*@RenderSection("Scripts", required: false)*@
-</body> 
+</body>
 </html>
