--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -1,8 +1,49 @@
 ﻿@page "/admin/books"
 @page "/admin"
+@inherits OwningComponentBase<IBookstoreRepository>
 
-<h3>Books</h3>
+<table class="table table-sm table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Book Id</th>
+            <th>Book Title</th>
+            <th>Author</th>
+        </tr>
+    </thead>
+</table>
+
+<tbody>
+    @if (BookData?.Count() > 0)
+    {
+        @foreach (Book b in BookData)
+        {
+            <tr>
+                <td>@b.BookId</td>
+                <td>@b.Title</td>
+                <td>@b.Author</td>
+            </tr>
+        }
+    }
+    else
+    {
+        <tr>
+            <td colspan="5" class="text-center">No Books</td>
+        </tr>
+    }
+</tbody>
 
 @code {
+    public IBookstoreRepository repo => Service;
 
+    public IEnumerable<Book> BookData { get; set; }
+
+    protected async override Task OnInitializedAsync()
+    {
+        await UpdateData();
+    }
+
+    public async Task UpdateData()
+    {
+        BookData = await repo.Books.ToListAsync();
+    }
 }
