--- a/Pages/Admin/Purchases.razor
+++ b/Pages/Admin/Purchases.razor
@@ -1,10 +1,10 @@
 ﻿@page "/admin/purchases"
 @inherits OwningComponentBase<IPurchaseRepository>
 
-<PurchaseTable TableTitle="Uncollected Purchases" Purchases="UncollectedPurchases"
-               ButtonLabel="Collected" PurchaseSelected="CollectPurchase"></PurchaseTable>
+<PurchaseTable TableTitle="Unshipped Purchases" Purchases="UnshippedPurchases"
+               ButtonLabel="Shipped" PurchaseSelected="ShipPurchase"></PurchaseTable>
 
-<PurchaseTable TableTitle="Collected Purchases" Purchases="CollectedPurchases"
+<PurchaseTable TableTitle="Shipped Purchases" Purchases="ShippedPurchases"
                ButtonLabel="Reset" PurchaseSelected="ResetPurchase"></PurchaseTable>
 
 <button class="btn btn-info" @onclick="@(x => UpdateData())">Refresh Data</button>
@@ -14,8 +14,8 @@
     public IPurchaseRepository repo => Service;
 
     public IEnumerable<Purchase> AllPurchases { get; set; }
-    public IEnumerable<Purchase> UncollectedPurchases { get; set; }
-    public IEnumerable<Purchase> CollectedPurchases { get; set; }
+    public IEnumerable<Purchase> UnshippedPurchases { get; set; }
+    public IEnumerable<Purchase> ShippedPurchases { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
@@ -25,17 +25,17 @@
     public async Task UpdateData()
     {
         AllPurchases = await repo.Purchases.ToListAsync();
-        UncollectedPurchases = AllPurchases.Where(x => !x.PurchaseReceived);
-        CollectedPurchases = AllPurchases.Where(x => x.PurchaseReceived);
+        UnshippedPurchases = AllPurchases.Where(x => !x.Shipped);
+        ShippedPurchases = AllPurchases.Where(x => x.Shipped);
     }
 
-    public void CollectPurchase(int id) => UpdatePurchase(id, true);
+    public void ShipPurchase(int id) => UpdatePurchase(id, true);
     public void ResetPurchase(int id) => UpdatePurchase(id, false);
 
     private void UpdatePurchase(int id, bool purchased)
     {
         Purchase p = repo.Purchases.FirstOrDefault(x => x.PurchaseId == id);
-        p.PurchaseReceived = purchased;
+        p.Shipped = purchased;
         repo.SavePurchase(p);
     }
 }
