--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -10,27 +10,40 @@
             <th>Author</th>
         </tr>
     </thead>
-</table>
 
-<tbody>
-    @if (BookData?.Count() > 0)
-    {
-        @foreach (Book b in BookData)
+    <tbody>
+        @if (BookData?.Count() > 0)
+        {
+            @foreach (Book b in BookData)
+            {
+                <tr>
+                    <td>@b.BookId</td>
+                    <td>@b.Title</td>
+                    <td>@b.Author</td>
+
+                    <td>
+                        <NavLink class="btn btn-info btn-sm" href="@GetDetailsUrl(b.BookId)">Details</NavLink>
+                    </td>
+
+                    <td>
+                        <NavLink class="btn btn-warning btn-sm" href="@GetEditUrl(b.BookId)">Edit</NavLink>
+                    </td>
+
+                    <td>
+                        <button class="btn btn-danger btn-sm" @onclick="@(x => RemoveBook(b))">Delete</button>
+                    </td>
+                </tr>
+            }
+        }
+        else
         {
             <tr>
-                <td>@b.BookId</td>
-                <td>@b.Title</td>
-                <td>@b.Author</td>
+                <td colspan="5" class="text-center">No Books</td>
             </tr>
         }
-    }
-    else
-    {
-        <tr>
-            <td colspan="5" class="text-center">No Books</td>
-        </tr>
-    }
-</tbody>
+    </tbody>
+
+</table>
 
 @code {
     public IBookstoreRepository repo => Service;
@@ -45,5 +58,14 @@
     public async Task UpdateData()
     {
         BookData = await repo.Books.ToListAsync();
+    }
+
+    public string GetDetailsUrl(long id) => $"/admin/books/details/{id}";
+    public string GetEditUrl(long id) => $"/admin/books/edit/{id}";
+
+    public async Task RemoveBook(Book b)
+    {
+        repo.DeleteBook(b);
+        await UpdateData();
     }
 }
