--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -45,6 +45,8 @@
 
 </table>
 
+<NavLink class="btn btn-primary" href="/admin/books/create">Create</NavLink>
+
 @code {
     public IBookstoreRepository repo => Service;
 
