--- a/Pages/Admin/Editor.razor
+++ b/Pages/Admin/Editor.razor
@@ -11,58 +11,56 @@
 <EditForm Model="b" OnValidSubmit="SaveBook">
     <DataAnnotationsValidator></DataAnnotationsValidator>
 
-    @if (b.BookId != 0)
-    {
-        <div class="form-group">
-            <label>Book Id</label>
-            <input class="form-control" disabled value="@b.BookId" />
-        </div>
+    <div class="form-group">
+        <label>Book Id</label>
+        <input class="form-control" disabled value="@b.BookId" />
+    </div>
 
-        <div class="form-group">
-            <label>Title:</label>
-            <ValidationMessage For="@(() => b.Title)"></ValidationMessage>
-            <InputText class="form-control" @bind-Value="b.Title"></InputText>
-        </div>
+    <div class="form-group">
+        <label>Title:</label>
+        <ValidationMessage For="@(() => b.Title)"></ValidationMessage>
+        <InputText class="form-control" @bind-Value="b.Title"></InputText>
+    </div>
 
-        <div class="form-group">
-            <label>Author:</label>
-            <ValidationMessage For="@(() => b.Author)"></ValidationMessage>
-            <InputText class="form-control" @bind-Value="b.Author"></InputText>
-        </div>
+    <div class="form-group">
+        <label>Author:</label>
+        <ValidationMessage For="@(() => b.Author)"></ValidationMessage>
+        <InputText class="form-control" @bind-Value="b.Author"></InputText>
+    </div>
 
-        <div class="form-group">
-            <label>Publisher:</label>
-            <ValidationMessage For="@(() => b.Publisher)"></ValidationMessage>
-            <InputText class="form-control" @bind-Value="b.Publisher"></InputText>
-        </div>
+    <div class="form-group">
+        <label>Publisher:</label>
+        <ValidationMessage For="@(() => b.Publisher)"></ValidationMessage>
+        <InputText class="form-control" @bind-Value="b.Publisher"></InputText>
+    </div>
 
-        <div class="form-group">
-            <label>Isbn:</label>
-            <ValidationMessage For="@(() => b.Isbn)"></ValidationMessage>
-            <InputText class="form-control" @bind-Value="b.Isbn"></InputText>
-        </div>
+    <div class="form-group">
+        <label>Isbn:</label>
+        <ValidationMessage For="@(() => b.Isbn)"></ValidationMessage>
+        <InputText class="form-control" @bind-Value="b.Isbn"></InputText>
+    </div>
 
-        <div class="form-group">
-            <label>Classification:</label>
-            <ValidationMessage For="@(() => b.Classification)"></ValidationMessage>
-            <InputText class="form-control" @bind-Value="b.Classification"></InputText>
-        </div>
+    <div class="form-group">
+        <label>Classification:</label>
+        <ValidationMessage For="@(() => b.Classification)"></ValidationMessage>
+        <InputText class="form-control" @bind-Value="b.Classification"></InputText>
+    </div>
 
-        <div class="form-group">
-            <label>Category:</label>
-            <ValidationMessage For="@(() => b.Category)"></ValidationMessage>
-            <InputText class="form-control" @bind-Value="b.Category"></InputText>
-        </div>
+    <div class="form-group">
+        <label>Category:</label>
+        <ValidationMessage For="@(() => b.Category)"></ValidationMessage>
+        <InputText class="form-control" @bind-Value="b.Category"></InputText>
+    </div>
 
-        <div class="form-group">
-            <label>PageCount:</label>
-            <ValidationMessage For="@(() => b.PageCount)"></ValidationMessage>
-            <InputNumber class="form-control" @bind-Value="b.PageCount"></InputNumber>
-        </div>
+    <div class="form-group">
+        <label>PageCount:</label>
+        <ValidationMessage For="@(() => b.PageCount)"></ValidationMessage>
+        <InputNumber class="form-control" @bind-Value="b.PageCount"></InputNumber>
+    </div>
 
-        <button type="submit" class="btn btn-@ThemeColor">Save</button>
-        <NavLink class="btn btn-secondary" href="/admin/books">Cancel</NavLink>
-    }
+    <button type="submit" class="btn btn-@ThemeColor">Save</button>
+    <NavLink class="btn btn-secondary" href="/admin/books">Cancel</NavLink>
+
 </EditForm>
 
 @code {
@@ -95,6 +93,8 @@
         {
             repo.SaveBook(b);
         }
+
+        NavManager.NavigateTo("/admin/books");
     }
 
     [Inject]
