Added two additional bootstrap changes

--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -3,11 +3,15 @@
 @inherits OwningComponentBase<IBookstoreRepository>
 
 <table class="table table-sm table-striped table-bordered">
-    <thead>
+    @*Additional Bootstrap: Made the table header dark themed*@
+    <thead class="thead-dark">
         <tr>
             <th>Book Id</th>
             <th>Book Title</th>
             <th>Author</th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
 
