--- a/Pages/Admin/PurchaseTable.razor
+++ b/Pages/Admin/PurchaseTable.razor
@@ -1,5 +1,6 @@
 ﻿<table class="table table-sm table-striped table-bordered">
-    <thead>
+    @*Additional Bootstrap: Made the table header dark themed*@
+    <thead class="thead-dark">
         <tr>
             <th colspan="5" class="text-center">@TableTitle</th>
         </tr>
