--- a/Pages/Admin/PurchaseTable.razor
+++ b/Pages/Admin/PurchaseTable.razor
@@ -1,4 +1,4 @@
-﻿<table class="table table-sm table-striped table-bordered">
+﻿<table class="table table-sm table-striped table-bordered table-hover">
     @*Additional Bootstrap: Made the table header dark themed*@
     <thead class="thead-dark">
         <tr>
