--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -2,7 +2,7 @@
 @page "/admin"
 @inherits OwningComponentBase<IBookstoreRepository>
 
-<table class="table table-sm table-striped table-bordered">
+<table class="table table-sm table-striped table-bordered table-hover">
     @*Additional Bootstrap: Made the table header dark themed*@
     <thead class="thead-dark">
         <tr>
